<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MeetingQuitDlg</class>
 <widget class="QDialog" name="MeetingQuitDlg">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>262</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true">*{
	border:none;
	font-family:'microsoft yahei';
	font-size:14px;
}

#MeetingQuitDlg{
	background:#fff;
}

#lbl_info_logo{
	background:url(:/img/warning);
	background-position:center;
    background-repeat:no-repeat;
}

#btn_end{
	background:#f53f3f;
	color:#fff;
	border-radius:2px;
}

#btn_leave{
	background:#f7f8fa;
	color:#c9cdd4;
}

#btn_cancel{
	background:#f2f3f5;
	color:#000;
}

</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <property name="spacing">
    <number>20</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>32</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>32</number>
   </property>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <property name="spacing">
        <number>10</number>
       </property>
       <item>
        <widget class="QLabel" name="lbl_info_logo">
         <property name="minimumSize">
          <size>
           <width>22</width>
           <height>22</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>22</width>
           <height>22</height>
          </size>
         </property>
         <property name="text">
          <string/>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="lbl_info">
         <property name="minimumSize">
          <size>
           <width>0</width>
           <height>22</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777214</width>
           <height>22</height>
          </size>
         </property>
         <property name="text">
          <string>请移交主持人给指定参会者，方能离开会议</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <spacer name="horizontalSpacer_4">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <property name="spacing">
        <number>20</number>
       </property>
       <item>
        <widget class="QPushButton" name="btn_end">
         <property name="minimumSize">
          <size>
           <width>240</width>
           <height>36</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>240</width>
           <height>36</height>
          </size>
         </property>
         <property name="text">
          <string>结束全部会议</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btn_leave">
         <property name="minimumSize">
          <size>
           <width>240</width>
           <height>36</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>240</width>
           <height>36</height>
          </size>
         </property>
         <property name="text">
          <string>离开会议</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btn_cancel">
         <property name="minimumSize">
          <size>
           <width>240</width>
           <height>36</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>240</width>
           <height>36</height>
          </size>
         </property>
         <property name="text">
          <string>取消</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
